--- a/spark_ml/notebooks/create_spark_model.ipynb
+++ b/spark_ml/notebooks/create_spark_model.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Current spark version is 2.4.3\n"
+      "Current spark version is 2.4.4\n"
      ]
     }
    ],
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -49,19 +49,10 @@
     {
      "data": {
       "text/plain": [
-       "lastException: Throwable = null\n"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
        "[label: int, tweet: string]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -92,16 +83,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tokenizer = tok_c6e35ae9983c\n",
-       "hashingTF = hashingTF_e8e3652c9345\n",
-       "lr = logreg_28be4a9c5110\n",
-       "pipeline = pipeline_5bb7dd1227bd\n"
+       "labelIndexer = strIdx_1b3fa02c846a\n",
+       "tokenizer = tok_40ec759f5603\n",
+       "hashingTF = hashingTF_25f6b22d261e\n",
+       "featureIndexer = vecIdx_e68fd4c3fe96\n"
       ]
      },
      "metadata": {},
@@ -110,20 +101,36 @@
     {
      "data": {
       "text/plain": [
-       "pipeline_5bb7dd1227bd"
+       "rf: org.apache.spark.ml.classification.RandomForestClas...\n"
       ]
      },
-     "execution_count": 17,
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "vecIdx_e68fd4c3fe96"
+      ]
+     },
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "import org.apache.spark.ml.{Pipeline, PipelineModel}\n",
-    "import org.apache.spark.ml.classification.LogisticRegression\n",
+    "import org.apache.spark.ml.classification.{RandomForestClassificationModel, RandomForestClassifier}\n",
+    "import org.apache.spark.ml.evaluation.MulticlassClassificationEvaluator\n",
+    "import org.apache.spark.ml.feature.{IndexToString, StringIndexer, VectorIndexer}\n",
     "import org.apache.spark.ml.feature.{HashingTF, Tokenizer}\n",
     "import org.apache.spark.ml.linalg.Vector\n",
     "import org.apache.spark.sql.Row\n",
+    "\n",
+    "val labelIndexer = new StringIndexer()\n",
+    "    .setInputCol(\"label\")\n",
+    "    .setOutputCol(\"indexedLabel\")\n",
+    "    .fit(raw_sentiment)\n",
     "\n",
     "val tokenizer = new Tokenizer()\n",
     "    .setInputCol(\"tweet\")\n",
@@ -134,23 +141,29 @@
     "    .setInputCol(tokenizer.getOutputCol)\n",
     "    .setOutputCol(\"features\")\n",
     "\n",
-    "val lr = new LogisticRegression()\n",
-    "    .setMaxIter(10)\n",
-    "    .setRegParam(0.001)\n",
+    "val featureIndexer = new VectorIndexer()\n",
+    "    .setInputCol(hashingTF.getOutputCol)\n",
+    "    .setOutputCol(\"indexedFeatures\")\n",
+    "    .setMaxCategories(4)\n",
+    "\n",
+    "val rf = new RandomForestClassifier()\n",
+    "    .setLabelCol(labelIndexer.getOutputCol)\n",
+    "    .setFeaturesCol(featureIndexer.getOutputCol)\n",
+    "    .setNumTrees(10)\n",
     "\n",
     "val pipeline = new Pipeline()\n",
-    "  .setStages(Array(tokenizer, hashingTF, lr))\n"
+    "    .setStages(Array(labelIndexer, tokenizer, hashingTF, featureIndexer, rf))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "model = pipeline_5bb7dd1227bd\n"
+       "model = pipeline_b26c4efe5270\n"
       ]
      },
      "metadata": {},
@@ -159,10 +172,10 @@
     {
      "data": {
       "text/plain": [
-       "pipeline_5bb7dd1227bd"
+       "pipeline_b26c4efe5270"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -173,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -182,13 +195,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "sameModel = pipeline_5bb7dd1227bd\n"
+       "sameModel = pipeline_b26c4efe5270\n"
       ]
      },
      "metadata": {},
@@ -197,10 +210,10 @@
     {
      "data": {
       "text/plain": [
-       "pipeline_5bb7dd1227bd"
+       "pipeline_b26c4efe5270"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -211,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 13,
    "metadata": {
     "scrolled": true
    },
@@ -220,30 +233,30 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "+-----+--------------------+--------------------+--------------------+--------------------+--------------------+----------+\n",
-      "|label|               tweet|               words|            features|       rawPrediction|         probability|prediction|\n",
-      "+-----+--------------------+--------------------+--------------------+--------------------+--------------------+----------+\n",
-      "|    0|@switchfoot http:...|[@switchfoot, htt...|(1000,[7,14,21,54...|[-0.9010125659401...|[0.28884245921786...|       1.0|\n",
-      "|    0|is upset that he ...|[is, upset, that,...|(1000,[170,193,22...|[1.84195706807746...|[0.86318000204742...|       0.0|\n",
-      "|    0|@Kenichan I dived...|[@kenichan, i, di...|(1000,[10,36,77,1...|[1.56488554961119...|[0.82705328017342...|       0.0|\n",
-      "|    0|my whole body fee...|[my, whole, body,...|(1000,[82,191,296...|[0.22286270195616...|[0.55548620895350...|       0.0|\n",
-      "|    0|@nationwideclass ...|[@nationwideclass...|(1000,[18,96,130,...|[3.23587893775226...|[0.96216236372478...|       0.0|\n",
-      "|    0|@Kwesidei not the...|[@kwesidei, not, ...|(1000,[18,223,710...|[0.33263478812891...|[0.58240032293813...|       0.0|\n",
-      "|    0|         Need a hug |      [need, a, hug]|(1000,[48,170,537...|[0.09849092454140...|[0.52460284610177...|       0.0|\n",
-      "|    0|@LOLTrish hey  lo...|[@loltrish, hey, ...|(1000,[139,157,17...|[-2.3498070018588...|[0.08708111418261...|       1.0|\n",
-      "|    0|@Tatiana_K nope t...|[@tatiana_k, nope...|(1000,[48,234,299...|[0.82843417404239...|[0.69602374240050...|       0.0|\n",
-      "|    0|@twittera que me ...|[@twittera, que, ...|(1000,[161,324,47...|[-0.1308461051982...|[0.46733506429688...|       1.0|\n",
-      "|    0|spring break in p...|[spring, break, i...|(1000,[13,193,301...|[0.24494144760041...|[0.56093102965734...|       0.0|\n",
-      "|    0|I just re-pierced...|[i, just, re-pier...|(1000,[307,329,47...|[-0.3966128922927...|[0.40212640024541...|       1.0|\n",
-      "|    0|@caregiving I cou...|[@caregiving, i, ...|(1000,[56,202,234...|[0.69361421378488...|[0.66677044374798...|       0.0|\n",
-      "|    0|@octolinz16 It it...|[@octolinz16, it,...|(1000,[126,230,32...|[0.03456400299115...|[0.50864014058830...|       0.0|\n",
-      "|    0|@smarrison i woul...|[@smarrison, i, w...|(1000,[18,83,170,...|[2.98112687604519...|[0.95171418244472...|       0.0|\n",
-      "|    0|@iamjazzyfizzle I...|[@iamjazzyfizzle,...|(1000,[7,71,202,2...|[1.27944368971401...|[0.78235506522524...|       0.0|\n",
-      "|    0|Hollis' death sce...|[hollis', death, ...|(1000,[2,3,18,82,...|[1.034255758677,-...|[0.73774013113593...|       0.0|\n",
-      "|    0|about to file taxes |[about, to, file,...|(1000,[108,388,48...|[-0.1130725419215...|[0.47176194434625...|       1.0|\n",
-      "|    0|@LettyA ahh ive a...|[@lettya, ahh, iv...|(1000,[13,107,201...|[-0.9205369385655...|[0.28484850199882...|       1.0|\n",
-      "|    0|@FakerPattyPattz ...|[@fakerpattypattz...|(1000,[53,102,154...|[-1.1212832164232...|[0.24577333766528...|       1.0|\n",
-      "+-----+--------------------+--------------------+--------------------+--------------------+--------------------+----------+\n",
+      "+-----+--------------------+------------+--------------------+--------------------+--------------------+--------------------+--------------------+----------+\n",
+      "|label|               tweet|indexedLabel|               words|            features|     indexedFeatures|       rawPrediction|         probability|prediction|\n",
+      "+-----+--------------------+------------+--------------------+--------------------+--------------------+--------------------+--------------------+----------+\n",
+      "|    0|@switchfoot http:...|         0.0|[@switchfoot, htt...|(1000,[7,14,21,54...|(1000,[7,14,21,54...|[4.43931449741300...|[0.44393144974130...|       1.0|\n",
+      "|    0|is upset that he ...|         0.0|[is, upset, that,...|(1000,[170,193,22...|(1000,[170,193,22...|[5.46349235938573...|[0.54634923593857...|       0.0|\n",
+      "|    0|@Kenichan I dived...|         0.0|[@kenichan, i, di...|(1000,[10,36,77,1...|(1000,[10,36,77,1...|[5.60297627210827...|[0.56029762721082...|       0.0|\n",
+      "|    0|my whole body fee...|         0.0|[my, whole, body,...|(1000,[82,191,296...|(1000,[82,191,296...|[5.50443548555005...|[0.55044354855500...|       0.0|\n",
+      "|    0|@nationwideclass ...|         0.0|[@nationwideclass...|(1000,[18,96,130,...|(1000,[18,96,130,...|[5.00477983480453...|[0.50047798348045...|       0.0|\n",
+      "|    0|@Kwesidei not the...|         0.0|[@kwesidei, not, ...|(1000,[18,223,710...|(1000,[18,223,710...|[4.88423644978360...|[0.48842364497836...|       1.0|\n",
+      "|    0|         Need a hug |         0.0|      [need, a, hug]|(1000,[48,170,537...|(1000,[48,170,537...|[4.88423644978360...|[0.48842364497836...|       1.0|\n",
+      "|    0|@LOLTrish hey  lo...|         0.0|[@loltrish, hey, ...|(1000,[139,157,17...|(1000,[139,157,17...|[4.73735323941076...|[0.47373532394107...|       1.0|\n",
+      "|    0|@Tatiana_K nope t...|         0.0|[@tatiana_k, nope...|(1000,[48,234,299...|(1000,[48,234,299...|[4.88423644978360...|[0.48842364497836...|       1.0|\n",
+      "|    0|@twittera que me ...|         0.0|[@twittera, que, ...|(1000,[161,324,47...|(1000,[161,324,47...|[4.94614153371915...|[0.49461415337191...|       1.0|\n",
+      "|    0|spring break in p...|         0.0|[spring, break, i...|(1000,[13,193,301...|(1000,[13,193,301...|[4.88423644978360...|[0.48842364497836...|       1.0|\n",
+      "|    0|I just re-pierced...|         0.0|[i, just, re-pier...|(1000,[307,329,47...|(1000,[307,329,47...|[5.50443548555005...|[0.55044354855500...|       0.0|\n",
+      "|    0|@caregiving I cou...|         0.0|[@caregiving, i, ...|(1000,[56,202,234...|(1000,[56,202,234...|[5.31733102968485...|[0.53173310296848...|       0.0|\n",
+      "|    0|@octolinz16 It it...|         0.0|[@octolinz16, it,...|(1000,[126,230,32...|(1000,[126,230,32...|[4.14293320983222...|[0.41429332098322...|       1.0|\n",
+      "|    0|@smarrison i woul...|         0.0|[@smarrison, i, w...|(1000,[18,83,170,...|(1000,[18,83,170,...|[5.12017203584503...|[0.51201720358450...|       0.0|\n",
+      "|    0|@iamjazzyfizzle I...|         0.0|[@iamjazzyfizzle,...|(1000,[7,71,202,2...|(1000,[7,71,202,2...|[4.79648460326501...|[0.47964846032650...|       1.0|\n",
+      "|    0|Hollis' death sce...|         0.0|[hollis', death, ...|(1000,[2,3,18,82,...|(1000,[2,3,18,82,...|[5.0007142316676,...|[0.50007142316676...|       0.0|\n",
+      "|    0|about to file taxes |         0.0|[about, to, file,...|(1000,[108,388,48...|(1000,[108,388,48...|[4.88423644978360...|[0.48842364497836...|       1.0|\n",
+      "|    0|@LettyA ahh ive a...|         0.0|[@lettya, ahh, iv...|(1000,[13,107,201...|(1000,[13,107,201...|[4.65614738179131...|[0.46561473817913...|       1.0|\n",
+      "|    0|@FakerPattyPattz ...|         0.0|[@fakerpattypattz...|(1000,[53,102,154...|(1000,[53,102,154...|[4.56015534791861...|[0.45601553479186...|       1.0|\n",
+      "+-----+--------------------+------------+--------------------+--------------------+--------------------+--------------------+--------------------+----------+\n",
       "only showing top 20 rows\n",
       "\n"
      ]
@@ -251,7 +264,7 @@
     {
      "data": {
       "text/plain": [
-       "predictionsDF = [label: int, tweet: string ... 5 more fields]\n"
+       "predictionsDF = [label: int, tweet: string ... 7 more fields]\n"
       ]
      },
      "metadata": {},
@@ -260,10 +273,10 @@
     {
      "data": {
       "text/plain": [
-       "[label: int, tweet: string ... 5 more fields]"
+       "[label: int, tweet: string ... 7 more fields]"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -276,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -294,7 +307,7 @@
        "UserDefinedFunction(<function1>,DoubleType,Some(List(org.apache.spark.ml.linalg.VectorUDT@3bfc3ba7)))"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -307,37 +320,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "+--------------------+\n",
-      "|   clean_probability|\n",
-      "+--------------------+\n",
-      "|  0.7111575407821329|\n",
-      "| 0.13681999795257868|\n",
-      "|  0.1729467198265728|\n",
-      "|  0.4445137910464909|\n",
-      "|0.037837636275218155|\n",
-      "|  0.4175996770618622|\n",
-      "| 0.47539715389822584|\n",
-      "|  0.9129188858173812|\n",
-      "|  0.3039762575994967|\n",
-      "|  0.5326649357031117|\n",
-      "|  0.4390689703426534|\n",
-      "|  0.5978735997545834|\n",
-      "|  0.3332295562520133|\n",
-      "| 0.49135985941169885|\n",
-      "|0.048285817555274425|\n",
-      "| 0.21764493477475924|\n",
-      "|  0.2622598688640698|\n",
-      "|  0.5282380556537445|\n",
-      "|  0.7151514980011753|\n",
-      "|  0.7542266623347125|\n",
-      "+--------------------+\n",
+      "+-------------------+\n",
+      "|  clean_probability|\n",
+      "+-------------------+\n",
+      "| 0.5560685502586992|\n",
+      "|0.45365076406142696|\n",
+      "| 0.4397023727891721|\n",
+      "|0.44955645144499445|\n",
+      "| 0.4995220165195461|\n",
+      "| 0.5115763550216391|\n",
+      "| 0.5115763550216391|\n",
+      "| 0.5262646760589238|\n",
+      "| 0.5115763550216391|\n",
+      "| 0.5053858466280851|\n",
+      "| 0.5115763550216391|\n",
+      "|0.44955645144499445|\n",
+      "| 0.4682668970315146|\n",
+      "| 0.5857066790167775|\n",
+      "|0.48798279641549647|\n",
+      "| 0.5203515396734982|\n",
+      "|   0.49992857683324|\n",
+      "| 0.5115763550216391|\n",
+      "|  0.534385261820869|\n",
+      "| 0.5439844652081389|\n",
+      "+-------------------+\n",
       "only showing top 20 rows\n",
       "\n"
      ]
@@ -346,6 +359,13 @@
    "source": [
     "predictionsDF.select(getProbability($\"probability\").alias(\"clean_probability\")).show"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
