Save 2 notebooks after execution.

--- a/spark_ml/notebooks/create_python_model.ipynb
+++ b/spark_ml/notebooks/create_python_model.ipynb
@@ -26,17 +26,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "URL transformed to HTTPS due to an HSTS policy\n",
-      "--2019-08-14 12:27:25--  https://cs.stanford.edu/people/alecmgo/trainingandtestdata.zip\n",
+      "--2020-01-16 21:17:43--  http://cs.stanford.edu/people/alecmgo/trainingandtestdata.zip\n",
       "Resolving cs.stanford.edu (cs.stanford.edu)... 171.64.64.64\n",
+      "Connecting to cs.stanford.edu (cs.stanford.edu)|171.64.64.64|:80... connected.\n",
+      "HTTP request sent, awaiting response... 301 Moved Permanently\n",
+      "Location: https://cs.stanford.edu/people/alecmgo/trainingandtestdata.zip [following]\n",
+      "--2020-01-16 21:17:43--  https://cs.stanford.edu/people/alecmgo/trainingandtestdata.zip\n",
       "Connecting to cs.stanford.edu (cs.stanford.edu)|171.64.64.64|:443... connected.\n",
       "HTTP request sent, awaiting response... 200 OK\n",
       "Length: 81363704 (78M) [application/zip]\n",
       "Saving to: ‘/home/jovyan/data/sentiment.zip’\n",
       "\n",
-      "/home/jovyan/data/s 100%[===================>]  77.59M  12.6MB/s    in 7.6s    \n",
+      "/home/jovyan/data/s 100%[===================>]  77.59M  4.19MB/s    in 16s     \n",
       "\n",
-      "2019-08-14 12:27:34 (10.2 MB/s) - ‘/home/jovyan/data/sentiment.zip’ saved [81363704/81363704]\n",
+      "2020-01-16 21:18:00 (4.89 MB/s) - ‘/home/jovyan/data/sentiment.zip’ saved [81363704/81363704]\n",
       "\n"
      ]
     }
@@ -55,7 +58,8 @@
      "output_type": "stream",
      "text": [
       "Archive:  sentiment.zip\n",
-      "replace testdata.manual.2009.06.14.csv? [y]es, [n]o, [A]ll, [N]one, [r]ename: ^C\n"
+      "  inflating: testdata.manual.2009.06.14.csv  \n",
+      "  inflating: training.1600000.processed.noemoticon.csv  \n"
      ]
     }
    ],
@@ -72,9 +76,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "total 312760\r\n",
-      "drwxr-sr-x 2 jovyan users      4096 Aug 14 12:20 .\r\n",
-      "drwsrwsr-x 1 jovyan users      4096 Aug 14 12:27 ..\r\n",
+      "total 312752\r\n",
+      "drwxr-sr-x 2 jovyan users      4096 Jan 16 21:18 .\r\n",
+      "drwsrwsr-x 1 jovyan users      4096 Jan 16 21:18 ..\r\n",
       "-rw-r--r-- 1 jovyan users  81363704 Apr 22  2012 sentiment.zip\r\n",
       "-rw-r--r-- 1 jovyan users     74326 Mar  4  2010 testdata.manual.2009.06.14.csv\r\n",
       "-rw-r--r-- 1 jovyan users 238803811 Mar  4  2010 training.1600000.processed.noemoticon.csv\r\n"
@@ -115,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -135,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -176,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -184,9 +188,9 @@
      "output_type": "stream",
      "text": [
       "[nltk_data] Downloading package stopwords to /home/jovyan/nltk_data...\n",
-      "[nltk_data]   Package stopwords is already up-to-date!\n",
+      "[nltk_data]   Unzipping corpora/stopwords.zip.\n",
       "[nltk_data] Downloading package punkt to /home/jovyan/nltk_data...\n",
-      "[nltk_data]   Package punkt is already up-to-date!\n"
+      "[nltk_data]   Unzipping tokenizers/punkt.zip.\n"
      ]
     },
     {
@@ -195,7 +199,7 @@
        "True"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -208,14 +212,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Dataset size is: 8032\n"
+      "Dataset size is: 8063\n"
      ]
     }
    ],
@@ -228,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -248,22 +252,22 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[Parallel(n_jobs=-1)]: Using backend LokyBackend with 6 concurrent workers.\n",
-      "[Parallel(n_jobs=-1)]: Done  38 tasks      | elapsed:   41.9s\n",
-      "[Parallel(n_jobs=-1)]: Done  54 out of  54 | elapsed:   55.3s finished\n"
+      "[Parallel(n_jobs=-1)]: Using backend LokyBackend with 4 concurrent workers.\n",
+      "[Parallel(n_jobs=-1)]: Done  42 tasks      | elapsed:   42.3s\n",
+      "[Parallel(n_jobs=-1)]: Done  54 out of  54 | elapsed:   53.4s finished\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "done in 58.420s\n",
+      "done in 56.690s\n",
       "\n",
-      "Best score: 0.681\n",
+      "Best score: 0.674\n",
       "Best parameters set:\n",
       "\tclf__max_depth: 8\n",
       "\tclf__n_estimators: 100\n",
-      "\ttfidf__max_df: 0.75\n"
+      "\ttfidf__max_df: 1.0\n"
      ]
     }
    ],
