--- a/spark_ml/notebooks/python_model_spark_inference.ipynb
+++ b/spark_ml/notebooks/python_model_spark_inference.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -63,23 +63,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "Pipeline(memory=None,\n",
-       "     steps=[('tfidf', TfidfVectorizer(analyzer='word', binary=False, decode_error='strict',\n",
-       "        dtype=<class 'numpy.float64'>, encoding='utf-8', input='content',\n",
-       "        lowercase=True, max_df=0.75, max_features=None, min_df=1,\n",
-       "        ngram_range=(1, 1), norm='l2',\n",
-       "        preprocessor=<function pre...obs=None,\n",
-       "            oob_score=False, random_state=None, verbose=0,\n",
-       "            warm_start=False))])"
+       "         steps=[('tfidf',\n",
+       "                 TfidfVectorizer(analyzer='word', binary=False,\n",
+       "                                 decode_error='strict',\n",
+       "                                 dtype=<class 'numpy.float64'>,\n",
+       "                                 encoding='utf-8', input='content',\n",
+       "                                 lowercase=True, max_df=1.0, max_features=None,\n",
+       "                                 min_df=1, ngram_range=(1, 1), norm='l2',\n",
+       "                                 preprocessor=<function preprocessor at 0x7f84df8cdd90>,\n",
+       "                                 smooth_idf=True, stop_words=None,\n",
+       "                                 strip_accents=None,...\n",
+       "                 RandomForestClassifier(bootstrap=True, class_weight=None,\n",
+       "                                        criterion='gini', max_depth=8,\n",
+       "                                        max_features='auto',\n",
+       "                                        max_leaf_nodes=None,\n",
+       "                                        min_impurity_decrease=0.0,\n",
+       "                                        min_impurity_split=None,\n",
+       "                                        min_samples_leaf=1, min_samples_split=2,\n",
+       "                                        min_weight_fraction_leaf=0.0,\n",
+       "                                        n_estimators=100, n_jobs=None,\n",
+       "                                        oob_score=False, random_state=None,\n",
+       "                                        verbose=0, warm_start=False))],\n",
+       "         verbose=False)"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
